--- a/src/project_selection_reduced.ipynb
+++ b/src/project_selection_reduced.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,27 +115,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_lhs_initial_points(p, n_samples):\n",
-    "    dim = 2*p  \n",
-    "    unit_samples = lhs(dim, samples=n_samples)\n",
-    "    \n",
-    "    samples = []\n",
-    "    for u in unit_samples:\n",
-    "        params = []\n",
-    "        for i in range(p):\n",
-    "            gamma = u[2*i] * 2*np.pi       # [0, 2π]\n",
-    "            beta  = u[2*i+1] * (np.pi/2)   # [0, π/2]\n",
-    "            params.extend([gamma, beta])\n",
-    "        samples.append(params)\n",
-    "    return samples"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -155,11 +134,11 @@
     "    sampler  = Sampler(mode=backend)\n",
     "    sampler.options.default_shots = shots_sampler\n",
     "\n",
-    "    lhs_points = generate_lhs_initial_points(p, repetitions)\n",
-    "\n",
     "    most_likely_bitstrings = []\n",
     "    for i in range(repetitions):\n",
-    "        init_params = lhs_points[i]\n",
+    "        innitial_gamma = 2 * np.pi * np.random.rand()\n",
+    "        innitial_beta = 2 * np.pi * np.random.rand()\n",
+    "        init_params = [val for _ in range(p) for val in (innitial_gamma, innitial_beta)]\n",
     "\n",
     "        result = minimize(cost_function_estimator, init_params, args=(circuit, hamiltonian, estimator), method=\"COBYLA\", tol=1e-2)\n",
     "\n",
